--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,5 +23,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python -m coverage run SitePlante/manage.py test
+        coverage run --source="." SitePlante/manage.py test
         coverage xml
