--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,5 +23,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        coverage run --source="." SitePlante/manage.py test
+        cd SitePlante
+        coverage run manage.py test
         coverage xml
