--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 coverage==7.6.12
 Django==5.1.7
+dotenv==0.9.9
 idna==3.10
 pillow==11.1.0
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.3
 tzdata==2025.1
