--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
+      env:
+        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
