--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       env:
-        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY_DJANGO }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
