--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,6 +6,7 @@ jobs:
   unittest:
 
     runs-on: ubuntu-latest
+    environment: djangoEnv
     strategy:
       max-parallel: 4
       matrix:
@@ -19,6 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Set environment variables
       run: echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
