--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,8 +30,10 @@ jobs:
         cd SitePlante
         coverage run manage.py test
         coverage xml
+    - name: Check if coverage.xml exists
+      run: ls -l SitePlante/
     - name: Upload coverage report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: coverage-report
         path: SitePlante/coverage.xml
@@ -46,7 +48,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Download coverage report
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: coverage-report
           path: SitePlante
