--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,40 +3,50 @@ name: Django CI
 on: push
 
 jobs:
-  unittest:
-
+  build:
     runs-on: ubuntu-latest
-    environment: djangoEnv
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.12]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Set environment variables
-      run: echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-    - name: Install Dependencies
+    - name: Build and Run Docker Container
+      run: docker-compose -f arosaj.yml up -d --build
+      env:
+        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
+
+    - name: Wait for Services to be Ready
+      run: sleep 5
+
+    - name: Run Migrations
+      run: docker exec $(docker ps -qf "name=web") python manage.py migrate
+      env:
+        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
+
+  unittest:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: djangoEnv
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Run Tests with Coverage
+      run: docker exec $(docker ps -qf "name=web") coverage run manage.py test
+      env:
+        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
+
+    - name: Generate and Copy Coverage Report
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        cd SitePlante
-        coverage run manage.py test
-        coverage xml
-    - name: Check if coverage.xml exists
-      run: ls -l SitePlante/
-    - name: Upload coverage report
+        docker exec $(docker ps -qf "name=web") coverage xml
+        docker cp $(docker ps -qf "name=web"):/app/coverage.xml .
+
+    - name: Upload Coverage Report
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: SitePlante/coverage.xml
+        path: ./coverage.xml
 
   sonarQubeScan:
     needs: unittest
@@ -44,6 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout Repository
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -51,15 +62,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: coverage-report
-          path: SitePlante
+          path: .
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
         with:
           args: >
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.sources=.
-            -Dsonar.python.coverage.reportPaths=SitePlante/coverage.xml
+            -Dsonar.python.coverage.reportPaths=coverage.xml
