--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,15 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+     - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version  # Verify installation
+
     - name: Build and Run Docker Container
       run: docker-compose -f arosaj.yml up -d --build
       env:
