--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,7 +28,7 @@ jobs:
       run: docker ps
 
     - name: Run Migrations
-      run: docker exec $(docker ps -qf "name=arosaje_web") python manage.py migrate
+      run: docker exec $(docker ps -qf "ancestor=arosaje_web") python manage.py migrate
       env:
         SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
 
@@ -42,14 +42,14 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Tests with Coverage
-      run: docker exec $(docker ps -qf "name=arosaje_web") coverage run manage.py test
+      run: docker exec $(docker ps -qf "ancestor=arosaje_web") coverage run manage.py test
       env:
         SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
 
     - name: Generate and Copy Coverage Report
       run: |
-        docker exec $(docker ps -qf "name=arosaje_web") coverage xml
-        docker cp $(docker ps -qf "name=arosaje_web"):/app/coverage.xml .
+        docker exec $(docker ps -qf "ancestor=arosaje_web") coverage xml
+        docker cp $(docker ps -qf "ancestor=arosaje_web"):/app/coverage.xml .
 
     - name: Upload Coverage Report
       uses: actions/upload-artifact@v4
