--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: Set environment variables
+      run: echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
+
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
@@ -21,8 +24,6 @@ jobs:
 
     - name: Build and Run Docker Container
       run: docker-compose -f arosaj.yml up -d --build
-      env:
-        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
 
     - name: List Docker Containers
       run: docker ps
@@ -30,8 +31,6 @@ jobs:
     - name: Run Migrations
       run: |
         docker-compose -f arosaj.yml exec web python manage.py migrate
-      env:
-        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
 
 
   unittest:
@@ -45,8 +44,6 @@ jobs:
 
     - name: Run Tests with Coverage
       run: docker exec $(docker ps -qf "ancestor=arosaje_web") coverage run manage.py test
-      env:
-        SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
 
     - name: Generate and Copy Coverage Report
       run: |
@@ -81,7 +78,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SECRET_KEY_DJANGO: ${{ secrets.SECRET_KEY_DJANGO }}
         with:
           args: >
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
