--- a/arosaj.yml
+++ b/arosaj.yml
@@ -6,4 +6,4 @@ services:
     ports:
       - "8000:8000"
     environment:
-      SECRET_KEY: ${SECRET_KEY_DJANGO}
+      SECRET_KEY: ${SECRET_KEY}
