--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,8 @@ jobs:
 
     - name: Run Migrations
       run: |
-        docker-compose -f arosaj.yml exec -e SECRET_KEY=${{ SECRET_KEY }} web python manage.py migrate
+        docker-compose -f arosaj.yml exec -e SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }} web python manage.py migrate
+
 
 
   unittest:
