--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         docker-compose -f arosaj.yml exec -T -e SECRET_KEY="${{ secrets.SECRET_KEY_DJANGO }}" web python manage.py migrate
 
+    - name: Check SECRET_KEY
+      run: docker-compose -f arosaj.yml exec web echo $SECRET_KEY
+
+
   unittest:
     needs: build
     runs-on: ubuntu-latest
