--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,7 +26,9 @@ jobs:
     - name: Run Migrations
       run: |
         echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
-        docker-compose -f arosaj.yml exec -T -e SECRET_KEY="${{ secrets.SECRET_KEY_DJANGO }}" web python manage.py migrate
+        docker-compose -f arosaj.yml exec web python manage.py migrate
+      env:
+          SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
 
   unittest:
     needs: build
