--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,8 +25,7 @@ jobs:
 
     - name: Run Migrations
       run: |
-        echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
-        docker-compose -f arosaj.yml exec web python manage.py migrate
+        docker-compose -f SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }} arosaj.yml exec web python manage.py migrate
       env:
           SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
 
