--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run Migrations
       run: |
-        SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }} docker-compose -f arosaj.yml exec web python manage.py migrate
+        docker-compose -f arosaj.yml exec web SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }} python manage.py migrate
       env:
           SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
 
