--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: Set environment variables
+      run: echo "SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }}" >> $GITHUB_ENV
+
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
@@ -25,9 +28,7 @@ jobs:
 
     - name: Run Migrations
       run: |
-        docker-compose -f arosaj.yml exec web SECRET_KEY=${{ secrets.SECRET_KEY_DJANGO }} python manage.py migrate
-      env:
-          SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        docker-compose -f arosaj.yml exec web python manage.py migrate
 
   unittest:
     needs: build
