--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,9 +36,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Tests with Coverage
-      run:
-        docker ps
-        docker exec $(docker ps -qf "ancestor=arosaje_web") coverage run manage.py test
+      run: docker ps
+
+    - name: Run Tests with Coverage
+      run: docker exec $(docker ps -qf "ancestor=arosaje_web") coverage run manage.py test
 
     - name: Generate and Copy Coverage Report
       run: |
