test use docker compose 27

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -58,6 +58,7 @@ jobs:
     - name: Run docker image
       run: |
         docker run -d --name arosaje_container arosaje_web
+        docker start -d arosaje_container
         docker ps
 
     - name: Run Tests with Coverage
