--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -66,13 +66,12 @@ jobs:
     - name: Generate and Copy Coverage Report
       run: |
         docker exec -d arosaje_container coverage xml
-        docker cp arosaje_container:/app/SitePlante/coverage.xml .
 
     - name: Upload Coverage Report
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: ./coverage.xml
+        path: /app/SitePlante/coverage.xml
 
   sonarQubeScan:
     needs: unittest
