--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -71,7 +71,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: coverage.xml
+        path: ./coverage.xml
 
   sonarQubeScan:
     needs: unittest
