--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -62,34 +62,30 @@ jobs:
     - name: Load Docker Image from Tarball
       run: docker load -i arosaje_web.tar
 
-    - name: Run docker image
+    - name: Install Docker Compose
       run: |
-        docker run -d --name arosaje_container \
-          -e SECRET_KEY="${{ secrets.SECRET_KEY_DJANGO }}" \
-          -e DEBUG="${{ secrets.DEBUG_DJANGO }}" \
-          -e NAME="${{ secrets.BDD_NAME }}" \
-          -e USER="${{ secrets.BDD_USER }}" \
-          -e PASSWORD="${{ secrets.BDD_PASSWORD }}" \
-          -e HOST="${{ secrets.BDD_HOST }}" \
-          -e PORT="${{ secrets.BDD_PORT }}" \
-          arosaje_web
-        docker ps
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
 
-
-    - name: Run Tests with Coverage
-      run: docker exec arosaje_container coverage run manage.py test
+    - name: Run Tests with Docker Compose
+      run: |
+        docker-compose -f compose.yml up -d
+        sleep 10  # Laisse le temps à la BDD de démarrer
+        docker-compose -f compose.yml exec web coverage run manage.py test
 
     - name: Generate Coverage Report
-      run: docker exec arosaje_container coverage xml
+      run: docker-compose -f compose.yml exec web coverage xml
 
-    - name: Copy Coverage Report from Container
-      run: docker cp arosaje_container:/app/SitePlante/coverage.xml .
+    - name: Copy Coverage Report
+      run: docker cp $(docker-compose -f compose.yml ps -q web):/app/SitePlante/coverage.xml .
 
     - name: Upload Coverage Report
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
         path: coverage.xml
+
 
   sonarQubeScan:
     needs: unittest
