--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -62,6 +62,12 @@ jobs:
     - name: Load Docker Image from Tarball
       run: docker load -i arosaje_web.tar
 
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+
     - name: Run Containers
       run: |
         docker-compose -f arosaj.yml up -d || true
@@ -78,7 +84,7 @@ jobs:
     - name: Generate Coverage Report
       run: docker-compose -f arosaj.yml exec web coverage xml
 
-    - name: Copy Coverage Report from Container
+    - name: Copy Coverage Report
       run: docker cp $(docker-compose -f arosaj.yml ps -q web):/app/SitePlante/coverage.xml .
 
     - name: Upload Coverage Report
@@ -86,7 +92,6 @@ jobs:
       with:
         name: coverage-report
         path: coverage.xml
-
 
 
   sonarQubeScan:
