--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -84,12 +84,24 @@ jobs:
         docker-compose -f arosaj.yml ps
         docker-compose -f arosaj.yml logs web
 
-    # Facultatif, ajoute un petit sleep si nécessaire
-    - name: Wait for DB readiness (optionnel)
-      run: sleep 10
+    - name: Wait for Web container readiness
+      run: |
+        for i in {1..30}; do
+          if docker-compose -f arosaj.yml exec web python manage.py migrate --check > /dev/null 2>&1; then
+            echo "Django is ready!"
+            exit 0
+          fi
+          echo "Waiting for Django..."
+          sleep 5
+        done
+        echo "Django not ready after 150 seconds."
+        exit 1
+
 
     - name: Run Tests with Coverage
-      run: docker-compose -f arosaj.yml exec web coverage run manage.py test
+      run: |
+        docker-compose -f arosaj.yml exec web coverage run manage.py test || docker-compose -f arosaj.yml logs web
+
 
     - name: Generate Coverage Report
       run: docker-compose -f arosaj.yml exec web coverage xml
